--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
         pip install -r requirements.txt
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
-    - - name: Run pytest with global ordering
+    - name: Run pytest with global ordering
     - run: pytest --order-scope=session -v
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
