--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main, master ]
   workflow_dispatch:
 
-
 jobs:
   test:
     timeout-minutes: 60
@@ -32,20 +31,31 @@ jobs:
         run: python -m playwright install --with-deps
 
       - name: Run pytest with global ordering and Allure
-        run: pytest --alluredir=allure-results --order-scope=session -v
+        run: pytest --alluredir=allure-results --order-scope=session -v --capture=sys
 
       - name: Generate Allure Report
+        if: always()
         run: allure generate allure-results -o allure-report --clean
 
       - name: Upload Allure Report as artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
+
+      - name: Upload Playwright traces
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: test-results/
 
       - name: Deploy Allure Report to GitHub Pages
         if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
+
           publish_dir: ./allure-report
