--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,37 +24,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install allure-pytest
-          sudo apt-get update
-          sudo apt-get install -y allure
 
-      - name: Ensure browsers are installed
-        run: python -m playwright install --with-deps
-
-      - name: Run pytest with global ordering and Allure
-        run: pytest --alluredir=allure-results --order-scope=session -v --capture=sys
-
-      - name: Generate Allure Report
-        if: always()
-        run: allure generate allure-results -o allure-report --clean
-
-      - name: Upload Allure Report as artifact
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
-
-      - name: Upload Playwright traces
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-traces
-          path: test-results/
-
-      - name: Deploy Allure Report to GitHub Pages
-        if: github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-
+      - name: Install Allure CLI
+        run: |
+          wget https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.tgz
+          tar -zxvf allure-2.25.0.tgz
+          sudo mv allure-2.
